<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C27B0"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_15puzzle"
            android:textSize="50sp" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.example.a15puzzletolga.SquareView

                    android:id="@+id/square0"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_red"
                    android:text="@string/square0"
                    android:textColor="#000000"
                    tools:text="@string/square0" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_red"
                    android:text="@string/square1"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_red"
                    android:text="@string/square2"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_red"
                    android:text="@string/square3"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_blue"
                    android:text="@string/square4"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_blue"
                    android:text="@string/square5"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_blue"
                    android:text="@string/square6"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square7"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_blue"
                    android:text="@string/square7"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square8"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_green"
                    android:text="@string/square8"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square9"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_green"
                    android:text="@string/square9"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square10"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_green"
                    android:text="@string/square10"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square11"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_green"
                    android:text="@string/square11"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square12"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_yellow"
                    android:text="@string/square12"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square13"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_yellow"
                    android:text="@string/square13"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square14"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/square_view_background_yellow"
                    android:text="@string/square14"
                    android:textColor="#000000" />

                <com.example.a15puzzletolga.SquareView
                    android:id="@+id/square15"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:text="@string/square15"
                    android:textColor="#00000000" />
            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.a15puzzletolga.TimeView
                    android:id="@+id/timeView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="00:00.000"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Moves:0"
                    android:textSize="24sp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#5CFC03"
                android:gravity="center"
                android:onClick="scrambleOnClick"
                android:text="@string/scramble" />
        </LinearLayout>

        <com.example.a15puzzletolga.Score
            android:id="@+id/ScoreS"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:gravity="center"
            android:lineSpacingExtra="12sp"
            android:text="Score: 100000"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:background="#FFA500"
            android:text="EXIT"
            android:textSize="36sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>